server/compilers/goLiteJS/src/test/ml2/invalid/mau_shortdecl1.go
// no new variables on left side of :=
package main

func main() {
  type b int
  b := 3
}
